--- a/Nails-world/Inicio.html
+++ b/Nails-world/Inicio.html
@@ -60,14 +60,28 @@
 
         <section class="Section-cuidados">
             <h3 class="Section-h3--cuidados">Cuidados</h3>
-            <video src="" controls autoplay muted playsinline poster="imgs/" controlslist="nodownload"></video>
-            <div class="Section-grid--historia">
-                <img src="imgs/aceite-cuticulas.jpg" alt="img-aceite-cuticulas" title="img-aceite-cuticulas" loading="lazy" width="350" height="350">
-                <img src="imgs/algodon-cuticulas.jpg" alt="img-algodon-cuticulas" title="img-algodon-cuticulas" loading="lazy" width="350" height="525">
-                <img src="imgs/cuticulas.jpg" alt="img-cuticulas" title="img-cuticulas" loading="lazy" width="400" height="309">
-                <img src="imgs/serum-cuticulas.jpg" alt="img-serum-cuticulas" title="img-serum-cuticulas" loading="lazy" width="350" height="525">
+            <video src="imgs/video-cuidados-uñas.mp4" controls autoplay muted playsinline poster="imgs/img-grid1.jpg" controlslist="nodownload" class="Section-video"></video>
+
+            <div class="Section-tabla">
+                <div class="Tabla-wrapper">
+                    <div class="Tabla-btns">
+                        <button class="Tabla-boton isActive">cutículas</button>
+                        <button class="Tabla-boton">hidratación</button>
+                        <button class="Tabla-boton">higiene</button>
+                    </div>
+                    <div class="Tabla-parrafos">
+                        <p class="Tabla-p isActive">La cutícula cumple una función fundamental, que es la de recubrir tu uña y protegerla de posibles infecciones. En vez de retirarlas cada vez que te hagas la manuicura, lo que tienes que hacer es aportarles hidratación para que sea más facil empujarlas sin tener que eliminarlas. Por otro lado, arrancarte los padrastros es un grave error, antes de tirar del padrasto, habria que recortarlos con cuidado, al tirar puedes arrastrar el tejido sano y llegar a la cutícula.</p>
+                        <p class="Tabla-p">No olvides aplicar tus aceites o sérum todas las noches sobre tus uñas y cutículas, de esta manera actuarán durante toda la noche mientras duermes y tus uñas estarán siempre sanas. La alimentación también juega un papel importante sobre tus uñas, el consumo de frutos secos, verduras y productos lácteos que aporten calcio y vitaminas A y B, pueden influir en tus uñas más de lo que crees.</p>
+                        <p class="Tabla-p">La higiene diaria es fundamental para tus uñas, procura siempre secarlas bien tras cada lavado, así evitarás que la uña se reblandezca e incluso que aparezcan bacterias u hongos. Las uñas no deben exponerse a agentes externos perjudiciales, como por ejemplo productos químicos o al propio frío, siempre debemos protegerlas y nunca morderlas.</p>
+                    </div>
+                </div>
             </div>
-        </section>
+            
+            <div class="Section-imgs">
+            <img src="imgs/serum-cuticulas.jpg" alt="img-serum-cuticulas" title="img-serum-cuticulas" loading="lazy" width="350" height="525" class="Cuidados-img">
+            <img src="imgs/aceite-cuticulas.jpg" alt="img-aceite-cuticulas" title="img-aceite-cuticulas" loading="lazy" width="350" height="350" class="Cuidados-img">
+            <img src="imgs/algodon-cuticulas.jpg" alt="img-algodon-cuticulas" title="img-algodon-cuticulas" loading="lazy" width="350" height="525" class="Cuidados-img">
+            </div>
         
         <!-- Logo sticky común para todas las secciones -->
         <div class="Logo-sticky">
