--- a/Nails-world/Contacto.html
+++ b/Nails-world/Contacto.html
@@ -28,6 +28,8 @@
             </ul>
         </nav>
     </header>
+
+    <!-- Marquesina de la página de contacto como introducción -->
     <div class="Marquesina">
         <div class="Marquesina-caja">
             <div class="Marquesina-texto">¡Nosotros te aconsejamos!</div>
@@ -41,6 +43,7 @@
         </div>
     </div>
 
+    <!-- Sección de la página de contacto, donde se explica con qué razon puedes rellenar el formulario -->
     <section class="Section-contacto">
         <div class="Info-contacto">
             <h2 class="Section-h2--contacto">Sabemos que después de toda esta información, tienes muchas ganas de cuidar
@@ -54,6 +57,7 @@
                 para que consigas la manicura perfecta. </p>
         </div>
 
+        <!-- Formulario de contacto con los campos para nombre, apellido, email, comentario y un input para que subas tus fotos -->
         <div class="Formulario-contacto">
             <form action="nailsworld.es" method="post" enctype="multipart/form-data">
                 <div class="Form-wrapper">
@@ -70,7 +74,7 @@
                 </div>
                 <div class="Form-wrapper">
                     <label for="comentario">Comentario:</label>
-                    <textarea id="comentario" name="comentario" rows="10" required
+                    <textarea id="comentario" name="comentario" rows="4" required
                         placeholder="Escribe tu comentario"></textarea>
                 </div>
                 <div class="Form-wrapper">
