--- a/Nails-world/Galeria.html
+++ b/Nails-world/Galeria.html
@@ -29,7 +29,7 @@
     </nav>
     </header>
 
-    <!-- Section de galería, con un grid de 5 filas y 5 columnas + ligthbox con cada una de las imágenes para que se vea más amplia -->
+    <!-- Section de galería, con un grid + ligthbox con cada una de las imágenes para que se vea más amplia -->
         <section class="Section-galeria">
             <img src="imgs/img-galeria1.jpg" alt="imagen-1-galeria" title="imagen-1-galeria" loading="lazy" class="Galeria-img" width="600" height="600">
             <img src="imgs/img-galeria2.jpg" alt="imagen-2-galeria" title="imagen-2-galeria" loading="lazy" class="Galeria-img" width="600" height="600">
