--- a/Nails-world/Inicio.html
+++ b/Nails-world/Inicio.html
@@ -104,14 +104,14 @@
     </section>
 
         <!-- Imágenes de la página de inicio -->
-        <article class="Article-imgs">
+        <div class="Article-imgs">
             <img src="imgs/serum-cuticulas.jpg" alt="img-serum-cuticulas" title="img-serum-cuticulas" loading="lazy"
                 width="350" height="525" class="Article-img">
             <img src="imgs/aceite-cuticulas.jpg" alt="img-aceite-cuticulas" title="img-aceite-cuticulas" loading="lazy"
                 width="350" height="350" class="Article-img">
             <img src="imgs/algodon-cuticulas.jpg" alt="img-algodon-cuticulas" title="img-algodon-cuticulas"
                 loading="lazy" width="350" height="525" class="Article-img">
-        </article>
+        </div>
     
 
         <!-- Logo sticky común para todas las secciones -->
