--- a/Nails-world/Contacto.html
+++ b/Nails-world/Contacto.html
@@ -20,7 +20,7 @@
         <button class="Header-btn">&#8788;</button>
         <nav class="Header-nav">
             <ul class="Header-ul">
-                <li class="Header-li"><a href="Inicio.html" title="Ir a inicio">inicio</a></li>
+                <li class="Header-li"><a href="index.html" title="Ir a inicio">inicio</a></li>
                 <li class="Header-li"><a href="Formas.html" title="Ir a formas">formas</a></li>
                 <li class="Header-li"><a href="Tecnicas.html" title="Ir a técnicas">técnicas</a></li>
                 <li class="Header-li"><a href="Galeria.html" title="Ir a galeria">galería</a></li>
@@ -96,7 +96,7 @@
     <footer class="Footer">
         <div class="Footer-wrapper">
             <nav class="Footer-nav">
-                <h3 class="Footer-h3"><a href="Inicio.html" title="Ir a inicio">inicio</a></h3>
+                <h3 class="Footer-h3"><a href="index.html" title="Ir a inicio">inicio</a></h3>
                 <h3 class="Footer-h3"><a href="Formas.html" title="Ir a formas">formas</a></h3>
                 <h3 class="Footer-h3"><a href="Tecnicas.html" title="Ir a técnica">técnicas</a></h3>
                 <h3 class="Footer-h3"><a href="Galeria.html" title="Ir a galeria">galería</a></h3>
